--- a/apps/dashboard/public/index.html
+++ b/apps/dashboard/public/index.html
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Land River</title>
+  <title>Land River Dashboard</title>
 </head>
 
 <body>
