--- a/apps/dashboard/public/index.html
+++ b/apps/dashboard/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="Land River - Land Registration System" />
-  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <!--
       manifest.json provides metadata used when your web app is installed on a
